--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </div>
       <hr id="horizontalLine"/>
       <br />
-      <div>
+      <div id="text">
         Software developer based in Montreal
       </div>
-      <div>
+      <div id="text">
         Working @ Lightspeed POS
       </div>
     </div>
