--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Node + express + tailwind CSS</footer>
+    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Express.js + tailwindcss</footer>
 
 </body>
 
