--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,20 +11,28 @@
     <title>Skyler Wittman</title>
 </head>
 
-<body class="bg-blue-400">
+<body class="bg-gradient-to-r from-cyan-900 to-emerald-800 w-screen">
 
+    <div class="absolute right-6 top-4">
+        <img class="h-48 w-48 rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
+    </div>
     <!-- height container -->
     <div class="flex flex-col pb-4" style="height:calc(100vh - 24px)">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
-                <span class="span">Skyler Wittman, product-minded developer focused on customers</span>
-                <span class="span">
-                Currently @ Lightspeed making Lightspeed Analytics: python, SQL, some React</span>
-                <span class="span">
-                Previously worked in Payments, Omnichannnel point of sale development @ Lightspeed
-                AIoT backend software @ Mnubo
+                <span class="main-title">Skyler Wittman</span>
+                <span class="terminal-span">Product-minded developer focused on solving customer problems</span>
+                <span class="terminal-span">
+                    Specialties: <br>
+                    &emsp; > Data analytics, API development, feature design, pragmatism
+                </span>
+                <span class="terminal-span">
+                    Currently @ <span class="font-medium text-lightspeed-red">Lightspeed</span> building <a href="https://www.lightspeedhq.com/pos/retail/analytics">Lightspeed Analytics</a> using python, SQL, some React & TypeScript</span>
+                <span class="terminal-span">
+                    Previously: <br> 
+                    &emsp; > built Lightspeed Payments, Omnichannnel point of sale software @ <span class="font-medium text-lightspeed-red">Lightspeed</span> <br> &emsp; > AIoT backend development @ <span class="text-mnubo-blue font-medium">Mnubo</span>
                 </span>
             </div>
         </div>
@@ -34,7 +42,7 @@
         </div>
     </div>
 
-    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Node + express + tailwind CSS</footer>
+    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Express.js + tailwindcss</footer>
 
 </body>
 
