Style contact and daylight pages

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,18 +11,18 @@
     <title>Skyler Wittman</title>
 </head>
 
-<body class="bg-gradient-to-r from-cyan-900 to-emerald-800 w-screen">
+<body class="bg-gradient-to-r from-cyan-900 to-emerald-800">
 
     <div class="absolute right-6 top-4">
         <img class="h-48 w-48 rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
     </div>
     <!-- height container -->
-    <div class="flex flex-col pb-4" style="height:calc(100vh - 24px)">
+    <div class="flex flex-col pb-4" style="height:calc(100vh - 32px)">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
-                <span class="main-title">Skyler Wittman</span>
+                <span class="title-common w-6/12 mx-adjust bg-indigo-900">Skyler Wittman</span>
                 <span class="terminal-span">Product-minded developer focused on solving customer problems</span>
                 <span class="terminal-span">
                     Specialties: <br>
@@ -37,12 +37,12 @@
             </div>
         </div>
         <div class="flex justify-center gap-4">
-            <a href="/contact"><button class="btn">Contact me</button></a>
-            <a href="/daylight"><button class="btn">Daylight widget</button></a>
+            <a href="/contact"><button class="btn-common bg-indigo-900">Contact me</button></a>
+            <a href="/daylight"><button class="btn-common bg-indigo-900">Daylight widget</button></a>
         </div>
     </div>
 
-    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Express.js + tailwindcss</footer>
+    <footer class="footer-common">Built with &#128150; by me using Express.js + tailwindcss</footer>
 
 </body>
 
