--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -11,30 +11,30 @@
     <title>Contact Me</title>
 </head>
 
-<body class="bg-green-400">
+<body class="bg-gradient-to-r from-emerald-800 to-pink-gradient">
 
     <!-- height container -->
-    <div class="flex flex-col pb-4" style="height:calc(100vh - 24px)">
+    <div class="flex flex-col pb-4" style="height:calc(100vh - 32px)">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
-                <span class="span">Contact Me</span>
+                <span class="title-common bg-indigo-700">Contact Me</span>
                 <div class="flex flex-col gap-4 ">
-                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img" src='images/LinkedInImage.png' alt='LinkedIn'></a>
-                    <a href="https://github.com/SkylerWittman"><img class="img" src='images/GitHubImage.png' alt='GitHub'></a>
-                    <a href="mailto:skyler.wittman@gmail.com"><img class="img" src='images/Email.png' alt='Email'></a>
+                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img" src='../images/LinkedInImage.png' alt='LinkedIn'></a>
+                    <a href="https://github.com/SkylerWittman"><img class="img" src='../images/GitHubImage.png' alt='GitHub'></a>
+                    <a href="mailto:skyler.wittman@gmail.com"><img class="img" src='../images/Email.png' alt='Email'></a>
                 </div>
             </div>
         </div>
 
         <div class="flex justify-center gap-4">
-            <a href="/"><button class="btn">Main page</button></a>
-            <a href="/daylight"><button class="btn">Daylight widget</button></a>
+            <a href="/"><button class="btn-common bg-indigo-700">Main page</button></a>
+            <a href="/daylight"><button class="btn-common bg-indigo-700">Daylight widget</button></a>
         </div>
     </div>
 
-    <footer class="justify-end bg-slate-400 text-right px-2">Built with &#128150; by me using Express.js + tailwindcss</footer>
+    <footer class="footer-common">Built with &#128150; by me using Express.js + tailwindcss</footer>
 
 </body>
 
