Update with GeoClique span

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -29,7 +29,10 @@
                     &emsp; > Data analytics, API development, feature design, pragmatism
                 </span>
                 <span class="terminal-span">
-                    Currently @ <span class="font-medium text-lightspeed-red">Lightspeed</span> building <a href="https://www.lightspeedhq.com/pos/retail/analytics">Lightspeed Analytics</a> using python, SQL, some React & TypeScript</span>
+                    Currently @ <a class="font-medium text-lightspeed-red" href="https://www.lightspeedhq.com/pos/retail/analytics">Lightspeed</a> building Lightspeed Analytics using python, SQL, some React & TypeScript
+                <br> &emsp; > CTO of <a class="text-geoclique-green" href="https://www.geoclique.com/welcome">GeoClique</a> revolutionizing the real estate investment industry
+                </span>
+
                 <span class="terminal-span">
                     Previously: <br> 
                     &emsp; > built Lightspeed Payments, Omnichannnel point of sale software @ <span class="font-medium text-lightspeed-red">Lightspeed</span> <br> &emsp; > AIoT backend development @ <span class="text-mnubo-blue font-medium">Mnubo</span>
